force-app/main/task3.01 - Storage - Data Ratention/objects/Data_Retention_Policy__c/Data_Retention_Policy__c.object-meta.xml
<CustomObject>
    <label>Data Retention Policy</label>
    <nameField>
        <label>Data Retention Policy  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Retention Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>