force-app/main/task3.01 - Storage - Data Ratention/objects/Data_Retention_Policy__c/fields/Deletion_Logic__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Logic__c</fullName>
    <label>Deletion Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Delete</fullName>
            </value>
            <value>
                <fullName>Custom Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>