force-app/main/task3.01 - Storage - Data Ratention/objects/Data_Retention_Policy__c/fields/Handler_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class_Name__c</fullName>
    <description>This is required is the Custom Deletion logic is selected.</description>
    <label>Handler Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>