force-app/main/task3.01 - Storage - Data Ratention/objects/Data_Retention_Policy__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Communication_Preference__c</fullName>
                <label>Communication Preference</label>
            </value>
            <value>
                <fullName>System_Log__c</fullName>
                <label>System Log</label>
            </value>
            <value>
                <fullName>LiveChatTranscript</fullName>
                <label>Chat Transcript</label>
            </value>
            <value>
                <fullName>NVM_VFPop</fullName>
            </value>
            <value>
                <fullName>REST Inbound Payload</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Order Products</fullName>
            </value>
            <value>
                <fullName>COM Order</fullName>
            </value>
            <value>
                <fullName>COM Order Item</fullName>
            </value>
            <value>
                <fullName>COM Order Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>