force-app/main/task3.01 - Storage - Data Ratention/objects/Data_Retention_Policy__c/fields/Retention_Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Retention_Time_Period__c</fullName>
    <label>Retention Time Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <label>30 Days</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>90 Days</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>180 Days</label>
            </value>
            <value>
                <fullName>360</fullName>
                <label>1 Year</label>
            </value>
            <value>
                <fullName>720</fullName>
                <label>2 Years</label>
            </value>
            <value>
                <fullName>1080</fullName>
                <label>3 Years</label>
            </value>
            <value>
                <fullName>1800</fullName>
                <label>5 Years</label>
            </value>
            <value>
                <fullName>3600</fullName>
                <label>10 Years</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>